# spryx-core-py

./: .coveragerc  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: getting-started.md  index.md
docs/api/: constants.md  enums.md  errors.md  id.md  index.md  pagination.md  permissions.md  security.md  sentinels.md  time.md  types.md
docs/development/: contributing.md  release-notes.md
spryx_core/: __init__.py  constants.py  id.py
spryx_core/security/: permissions.py
tests/: test_constants.py  test_enums.py  test_id.py  test_init.py  test_pagination.py  test_sentinels.py  test_time.py  test_types.py
